[package]
name = "hack_match_bot"
version = "0.1.0"
authors = ["Justin Frank <justinpfrank@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18", features = ["xlib", "xtest"] }
scopeguard = "1.0"
image = "0.22"
