[package]
name = "hack_match_bot"
version = "0.1.0"
authors = ["Justin Frank <justinpfrank@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.8.0", features = ["image", "xtest"] }
